--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,8 +11,15 @@
 .Navbarz {
   background-color: var(--color-primary-1);
   border-bottom: var(--line);
-  padding: 2rem;
+  padding-top: 0rem !important;
+  padding-bottom: 0rem !important;
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
   font-size: 2rem; }
+  .Navbarz__Link {
+    padding: 5px; }
+    .Navbarz__Link__img {
+      margin: 0px !important; }
   .Navbarz__List {
     color: black;
     padding-top: 20px !important;
