--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -1,8 +1,18 @@
 .Navbarz {
     background-color: var(--color-primary-1);
     border-bottom: var(--line);
-    padding: 2rem;
+    padding-top: 0rem !important;
+    padding-bottom: 0rem !important;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
     font-size: 2rem;
+
+    &__Link {
+      padding: 5px;
+      &__img{
+        margin: 0px !important;
+      }
+    }
 
     &__List {
       color: black;
