--- a/public/css/style.css
+++ b/public/css/style.css
@@ -868,27 +868,24 @@ ul {
       line-height: 33px;
       border-radius: 8px;
       background: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%); }
-  .game__modal__container {
-    background-color: var(--color-grey-5); }
-  .game__modal__outerContainer {
+  .game__modal__Container {
     display: flex;
-    justify-content: center; }
-  .game__modal__boxContainer {
-    background-color: black;
-    width: 80%;
-    border-radius: 10px;
-    border: 3px solid; }
-    .game__modal__boxContainer__item {
-      display: flex; }
-  .game__modal__paragraph {
-    margin-top: 10px;
-    margin-bottom: 20px;
-    text-align: center;
-    font-family: raleway;
-    color: white;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 16px; }
+    flex-direction: column;
+    justify-content: center;
+    background-color: black; }
+    .game__modal__Container__item {
+      display: flex;
+      justify-content: center; }
+    .game__modal__Container__text {
+      text-align: center;
+      font-family: raleway;
+      color: white;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 16px; }
+  .game__modal__icon {
+    width: 50px;
+    height: 50px; }
 
 @media (min-width: 767px) {
   .game__modal {
