--- a/public/sass/pages/_game.scss
+++ b/public/sass/pages/_game.scss
@@ -135,32 +135,28 @@
 		}
 	}
 	&__modal{
-		&__container{
-			background-color: var(--color-grey-5);
-		}
-		&__outerContainer{
+		&__Container {
 			display: flex;
+			flex-direction: column;
 			justify-content: center;
-		}
-		&__boxContainer {
 			background-color: black;
-			width: 80%;
-			border-radius: 10px;
-			border: 3px solid;
+			
 			&__item{
 				display: flex;
+				justify-content: center;
+			}
+			&__text{
+				text-align: center;
+				font-family: raleway;
+				color: white;
+				font-size: 14px;
+				font-weight: 500;	
+				line-height: 16px;
 			}
 		}
-		&__paragraph{
-			margin-top: 10px;
-			margin-bottom: 20px;
-			text-align: center;
-			font-family: raleway;
-			color: white;
-			font-size: 14px;
-			font-weight: 500;	
-			line-height: 16px;
-		
+		&__icon{
+			width: 50px;
+			height: 50px;
 		}
 	}
 }
