--- a/public/css/style.css
+++ b/public/css/style.css
@@ -773,6 +773,7 @@ ul {
 .game {
   background-color: var(--color-grey-5); }
   .game__container {
+    padding: 2.5%;
     margin: auto;
     width: 100%;
     max-width: 600px;
@@ -868,28 +869,6 @@ ul {
       line-height: 33px;
       border-radius: 8px;
       background: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%); }
-  .game__modal__Container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: black; }
-    .game__modal__Container__item {
-      display: flex;
-      justify-content: center; }
-    .game__modal__Container__text {
-      text-align: center;
-      font-family: raleway;
-      color: white;
-      font-size: 14px;
-      font-weight: 500;
-      line-height: 16px; }
-  .game__modal__icon {
-    width: 50px;
-    height: 50px; }
-
-@media (min-width: 767px) {
-  .game__modal {
-    max-width: 650px; } }
 
 @media (min-width: 275px) and (max-width: 500px) {
   .game__slotItems {
@@ -967,6 +946,46 @@ ul {
   margin-right: 5px;
   background-color: white;
   background-size: 100% 100%; }
+
+.gameModal {
+  background-color: black;
+  border: 5px solid var(--color-yellow-1);
+  top: 25%; }
+  .gameModal__Top {
+    border-bottom: none;
+    border-radius: 0;
+    background-color: black; }
+  .gameModal__Container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: black; }
+    .gameModal__Container__item {
+      display: flex;
+      justify-content: center; }
+    .gameModal__Container__text {
+      margin: 2.5%;
+      text-align: center;
+      font-family: raleway;
+      color: var(--color-yellow-1);
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 16px; }
+  .gameModal__icon {
+    width: 50px;
+    height: 50px; }
+
+@media (min-width: 767px) and (max-width: 1280px) {
+  .gameModal {
+    top: 30%;
+    left: 30%;
+    width: 40%; } }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .gameModal {
+    top: 25%;
+    left: 15%;
+    width: 70%; } }
 
 .TopupKey {
   padding: 10%;
@@ -1329,7 +1348,7 @@ input:-webkit-autofill {
   --color-red-2: #F34817;
   --color-red-3: #D0021B;
   --color-red-4: #DA4733;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
+  --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
   --linear-game: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%);
   --line: 1px solid var(--color-grey-light-2); }
