--- a/public/sass/pages/_game.scss
+++ b/public/sass/pages/_game.scss
@@ -2,6 +2,7 @@
 	background-color: var(--color-grey-5);
 
 	&__container{
+		padding: 2.5%;
 		margin: auto;
 		width: 100%;
 		max-width: 600px;
@@ -134,38 +135,9 @@
 			background: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%)		
 		}
 	}
-	&__modal{
-		&__Container {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			background-color: black;
-			
-			&__item{
-				display: flex;
-				justify-content: center;
-			}
-			&__text{
-				text-align: center;
-				font-family: raleway;
-				color: white;
-				font-size: 14px;
-				font-weight: 500;	
-				line-height: 16px;
-			}
-		}
-		&__icon{
-			width: 50px;
-			height: 50px;
-		}
-	}
+	
 }
 
-@media (min-width: 767px ){
-  .game__modal{
-		max-width: 650px;
-  }
-}
 
 @media (min-width: 275px ) and (max-width:500px ) {
   .game__slotItems{
@@ -263,3 +235,54 @@
 }
 
 
+.gameModal{
+	background-color: black;
+	border: 5px solid var(--color-yellow-1);
+	top: 25%;
+
+	&__Top{
+		border-bottom: none;
+		border-radius: 0;
+		background-color: black;
+	}
+	&__Container {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		background-color: black;
+		
+		&__item{
+			display: flex;
+			justify-content: center;
+		}
+		&__text{
+			margin: 2.5%;
+			text-align: center;
+			font-family: raleway;
+			color: var(--color-yellow-1);
+			font-size: 20px;
+			font-weight: 500;	
+			line-height: 16px;
+		}
+	}
+	&__icon{
+		width: 50px;
+		height: 50px;
+	}
+}
+
+@media (min-width: 767px) and (max-width:1280px){
+  .gameModal{
+    top: 30%;
+    left: 30%;
+    width: 40%;
+  }
+} 
+
+@media (min-width: 200px) and (max-width:766px) {
+  .gameModal{
+    top: 25%;
+    left: 15%;
+    width: 70%;
+  }
+} 
