--- a/public/css/style.css
+++ b/public/css/style.css
@@ -700,14 +700,14 @@ ul {
   padding-bottom: 20px; }
   .BannerText1__text1 {
     font-size: 4rem;
-    padding: 2rem;
+    padding: 1rem;
     margin: 0;
     color: var(--color-yellow-1);
     text-align: center; }
   .BannerText1__text2 {
     padding: 2rem;
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: var(--color-grey-6); }
 
 .BannerText2 {
@@ -719,13 +719,13 @@ ul {
   padding-bottom: 20px; }
   .BannerText2__text1 {
     font-size: 4rem;
-    padding: 2rem;
+    padding: 1rem;
     margin: 0; }
   .BannerText2__text2 {
-    font-size: 1.5rem;
-    padding-right: 2rem;
-    padding-left: 2rem;
-    margin: 0; }
+    font-size: 2rem;
+    padding: 2rem;
+    margin: 0;
+    text-align: left; }
 
 .rowz {
   margin: 0; }
@@ -1377,7 +1377,7 @@ input:-webkit-autofill {
   --color-red-2: #F34817;
   --color-red-3: #D0021B;
   --color-red-4: #DA4733;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
+  --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
   --linear-game: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%);
   --line: 1px solid var(--color-grey-light-2); }
