--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -209,7 +209,7 @@
 
   &__text1{
     font-size: 4rem;
-    padding: 2rem;
+    padding: 1rem;
     margin: 0;
     color: var(--color-yellow-1);
     text-align: center;
@@ -217,7 +217,7 @@
   &__text2{
     padding: 2rem;
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: var(--color-grey-6);
   }
 }
@@ -233,14 +233,14 @@
 
   &__text1{
     font-size: 4rem;
-    padding: 2rem;
+    padding: 1rem;
     margin: 0;
   }
   &__text2{
-    font-size: 1.5rem;
-    padding-right: 2rem;
-    padding-left: 2rem;
+    font-size: 2rem;
+    padding: 2rem;
     margin: 0;
+    text-align: left;
   }
 }
 
