--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1092,7 +1092,6 @@ ul {
             height: 20px; }
     .User__Phone__row3 {
       width: 100%;
-      height: 10%;
       display: flex;
       justify-content: space-around; }
       .User__Phone__row3__button1 {
@@ -1105,7 +1104,8 @@ ul {
 @media (min-width: 200px) and (max-width: 768px) {
   .User__container {
     padding-top: 5%;
-    padding-bottom: 5%; } }
+    padding-bottom: 5%;
+    min-height: 500px; } }
 
 @media (min-width: 200px) and (max-width: 768px) {
   .User__Label {
