--- a/public/sass/pages/_user.scss
+++ b/public/sass/pages/_user.scss
@@ -123,7 +123,6 @@
 
         &__row3{
             width: 100%;
-            height: 10%;
             display: flex;
             justify-content: space-around;
 
@@ -144,6 +143,7 @@
     .User__container{
         padding-top: 5%;
         padding-bottom: 5%;
+        min-height: 500px;
     }
 }
 
