--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -239,6 +239,8 @@
   &__text2{
     font-size: 2rem;
     padding: 2rem;
+    padding-left: 10%;
+    padding-right: 10%;
     margin: 0;
     text-align: left;
   }
@@ -246,4 +248,8 @@
 
 .rowz {
   margin: 0;
+}
+
+li{
+  margin-bottom: 15px;
 }
