--- a/public/sass/pages/_bidding.scss
+++ b/public/sass/pages/_bidding.scss
@@ -5,7 +5,6 @@
   padding-left: 20%;
   padding-right: 20%;
   padding-top: 5%;
-  border-bottom: 10px solid yellow;
 
   &__container{
     width: 100%;
@@ -142,9 +141,9 @@
 
 
     &__btnBuy{
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
+      // display: flex;
+      // flex-direction: row;
+      // justify-content: center;
 
       width: 80%;
       height: 75px;
@@ -168,11 +167,11 @@
     border-radius: 8px;
 
     &__btnCancel{
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
+      // display: flex;
+      // flex-direction: row;
+      // justify-content: center;
 
-      width: 90%;
+      width: 80%;
       height: 75px;
       border: none;
 
