--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@
         border-radius: 4px; }
         .footerz__Top__Left__button:active {
           background-color: var(--color-yellow-1) !important;
-          color: var(--color-dark-3); }
+          color: var(--color-dark-2) !important; }
         .footerz__Top__Left__button:hover {
           background-color: var(--color-yellow-1);
           color: var(--color-dark-3); }
