--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -34,7 +34,7 @@
 
         &:active{
           background-color: var(--color-yellow-1) !important;
-          color: var(--color-dark-3);
+          color: var(--color-dark-2) !important;
         }
         &:hover{
           background-color: var(--color-yellow-1);
